updated css and js

--- a/index.html
+++ b/index.html
@@ -6,36 +6,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<link rel="stylesheet" href="style/style.css">-->
+    <link rel="stylesheet" href="style/nav-styles.css">
     <title>Vaibhavy's Page</title>
 </head>
 <body>
-    <header> 
-        <h3>my portfolio</h3>
+
+    <header>
+        <h3>vaibhavy</h3>
+        <button id="menu-button"><img src = "img/ui/menu.svg"></button>
     </header>
 
-    <div id="nav">
+    <nav id="menu-items">
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="./pages/works.html">Projects</a></li>
             <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
             <li><a href="https://github.com/vaibhavyxx">github</a></li>
             <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
-    </div>
+        </ul>
+    </nav>
 
     <div id="intro">
         <video src="./img/videos/teaser.mp4" alt="demo reel" type="video/mp4" autoplay="true" ></video>
         <h1>Vaibhavy</h1>
-        <h3>about</h3>
-
-    <div id="featured-projects-title">
-        <h1>featured projects</h1>
-        <a id="more-work" href="pages/works.html"><img src="img/ui/Arrow 1.png"></a>
-    </div>
+        <h3>creative technologist</h3>
 
     <footer>
-        made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
-        <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
+       Made in 2025
     </footer>
 </body>
+<script src="./src/main.js"></script>
 </html>
