--- a/pages/works.html
+++ b/pages/works.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works</title>
+    <link rel="stylesheet" href="../style/nav-styles.css">
 </head>
 <body>
-     <nav>
+     <header>
+        <h3>vaibhavy</h3>
+        <button id="menu-button"><img src = "../img/ui/menu.svg"></button>
+    </header>
+
+    <nav id="menu-items">
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="./pages/works.html">Projects</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./works.html">Works</a></li>
             <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
             <li><a href="https://github.com/vaibhavyxx">github</a></li>
             <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
-        </nav>
-    <header>
-        <h1>Personal Works</h1>
-    </header>
+        </ul>
+    </nav>
+
 
     <section> 
         <h2>Immersive Experiences</h2>
     <section>
-        <img src="../img/projects/shades.png">
+        <img src="../img/social media/seam-social.png">
         <p>Tejay Interactive Music Experience</p>
         <p>Open world unity simulation where users can interact with the environment.</p>
         <ul>
@@ -32,7 +37,7 @@
     </section>
 
     <section>
-        <img src="../img/projects/shades.png">
+        <img src="../img/social media/seam-social.png">
         <p>Ritchie AR</p>
         <p>Augmented reality experience for RIT's brick city homecoming where users can click pictures with virtual Ritchie. It has gathered 1.5k+ views with total time spent on it being 26 minutes.</p>
         <ul>
@@ -43,7 +48,7 @@
     </section>
 
      <section>
-        <img src="../img/projects/shades.png">
+        <img src="../img/social media/seam-social.png">
         <p>Web Shooters</p>
         <p>Developed an arduino console to 'web' spider-man in a game, made with Unity.</p>
         <ul>
@@ -59,7 +64,7 @@
     <h2>Web Development</h2>
 
     <section>
-        <img src="../img/projects/">
+        <img src="../img/social media/seam-social.png">
         <p>Journal Miniapp</p>
         <p>Typescript mini-app, published on Google PlayStore and Appstore as a part of in-game library.</p>
         <ul>
@@ -69,7 +74,7 @@
     </section>
 
     <section>
-        <img src="../img/projects/">
+        <img src="../img/social media/seam-social.png">
         <p>Two Worlds</p>
         <p>Javascript project that uses Craig Reynold's flocking idea</p>
         <ul>
@@ -82,7 +87,7 @@
     </section>
 
     <section>
-        <img src="../img/projects/">
+        <img src="../img/social media/seam-social.png">
         <p>Rick and Morty Search Engine</p>
         <p>A search engine that uses rick and morty rest api to find the show's characters.</p>
         <ul>
@@ -99,7 +104,7 @@
     <h2>UI/UX</h2>
 
      <section>
-        <img src="../img/projects/">
+        <img src="../img/social media/seam-social.png">
         <p>Shades: UX Studies</p>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
@@ -109,7 +114,7 @@
     </section>
 
      <section>
-        <img src="../img/projects/">
+        <img src="../img/social media/seam-social.png">
         <p>Content Tattva</p>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
@@ -122,4 +127,5 @@
     </section>
 </section>
 </body>
+<script src="../src/main.js"></script>
 </html>
