updated work css

--- a/pages/works.html
+++ b/pages/works.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works</title>
     <link rel="stylesheet" href="../style/nav-styles.css">
+    <link rel="stylesheet" href="../style/works-style.css">
+
 </head>
 <body>
      <header>
@@ -25,9 +27,9 @@
 
     <section> 
         <h2>Immersive Experiences</h2>
-    <section>
+    <section class="featured-work">
         <img src="../img/social media/seam-social.png">
-        <p>Tejay Interactive Music Experience</p>
+        <h4>Tejay Interactive Music Experience</h4>
         <p>Open world unity simulation where users can interact with the environment.</p>
         <ul>
             <li>Unity</li>
@@ -36,9 +38,9 @@
         </ul>
     </section>
 
-    <section>
+    <section class="featured-work">
         <img src="../img/social media/seam-social.png">
-        <p>Ritchie AR</p>
+        <h4>Ritchie AR</h4>
         <p>Augmented reality experience for RIT's brick city homecoming where users can click pictures with virtual Ritchie. It has gathered 1.5k+ views with total time spent on it being 26 minutes.</p>
         <ul>
             <li>Zapworks</li>
@@ -47,9 +49,9 @@
         </ul>
     </section>
 
-     <section>
+     <section class="featured-work">
         <img src="../img/social media/seam-social.png">
-        <p>Web Shooters</p>
+        <h4>Web Shooters</h4>
         <p>Developed an arduino console to 'web' spider-man in a game, made with Unity.</p>
         <ul>
             <li>Unity</li>
@@ -63,9 +65,9 @@
 <section>
     <h2>Web Development</h2>
 
-    <section>
+    <section class="featured-work">
         <img src="../img/social media/seam-social.png">
-        <p>Journal Miniapp</p>
+        <h4>Journal Miniapp</h4>
         <p>Typescript mini-app, published on Google PlayStore and Appstore as a part of in-game library.</p>
         <ul>
             <li>Typescript</li>
@@ -73,9 +75,9 @@
         </ul>
     </section>
 
-    <section>
+    <section class="featured-work">
         <img src="../img/social media/seam-social.png">
-        <p>Two Worlds</p>
+        <h4>Two Worlds</h4>
         <p>Javascript project that uses Craig Reynold's flocking idea</p>
         <ul>
             <li>Javascript</li>
@@ -86,9 +88,9 @@
         </ul>
     </section>
 
-    <section>
+    <section class="featured-work">
         <img src="../img/social media/seam-social.png">
-        <p>Rick and Morty Search Engine</p>
+        <h4>Rick and Morty Search Engine</h4>
         <p>A search engine that uses rick and morty rest api to find the show's characters.</p>
         <ul>
             <li>Javascript</li>
@@ -103,9 +105,9 @@
 <section>
     <h2>UI/UX</h2>
 
-     <section>
+     <section class="featured-work">
         <img src="../img/social media/seam-social.png">
-        <p>Shades: UX Studies</p>
+        <h4>Shades: UX Studies</h4>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
             <li>UX Studies</li>
@@ -113,9 +115,9 @@
         </ul>
     </section>
 
-     <section>
+     <section class="featured-work">
         <img src="../img/social media/seam-social.png">
-        <p>Content Tattva</p>
+        <h4>Content Tattva</h4>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
             <li>UX Studies</li>
