updated icons for works

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav id="menu-items">
         <ul>
             <li><a href="index.html">home</a></li>
-            <li><a href="./pages/works.html">Projects</a></li>
+            <li><a href="./pages/works.html">projects</a></li>
             <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
             <li><a href="https://github.com/vaibhavyxx">github</a></li>
             <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
@@ -31,6 +31,9 @@
         <h1>Vaibhavy</h1>
         <h3>creative technologist</h3>
 
+    <div id="work">
+        <h2>Experiences</h2>
+    </div>
     <footer>
        Made in 2025
     </footer>
