--- a/pages/works.html
+++ b/pages/works.html
@@ -17,18 +17,19 @@
     <nav id="menu-items">
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="./works.html">Works</a></li>
+            <li><a href="./works.html">projects</a></li>
             <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
             <li><a href="https://github.com/vaibhavyxx">github</a></li>
             <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
         </ul>
     </nav>
 
-
     <section> 
-        <h2>Immersive Experiences</h2>
-    <section class="featured-work">
-        <img src="../img/social media/seam-social.png">
+        <button class="work-button"><h2>Immersive Experiences</h2></button>
+
+        <div class="immersive-apps">
+        <section class="featured-work">
+        <img src="../img/projects/aloe-vera.png">
         <h4>Tejay Interactive Music Experience</h4>
         <p>Open world unity simulation where users can interact with the environment.</p>
         <ul>
@@ -39,7 +40,7 @@
     </section>
 
     <section class="featured-work">
-        <img src="../img/social media/seam-social.png">
+        <img src="../img/projects/ar/ritchie-ar-cropped.png">
         <h4>Ritchie AR</h4>
         <p>Augmented reality experience for RIT's brick city homecoming where users can click pictures with virtual Ritchie. It has gathered 1.5k+ views with total time spent on it being 26 minutes.</p>
         <ul>
@@ -50,7 +51,7 @@
     </section>
 
      <section class="featured-work">
-        <img src="../img/social media/seam-social.png">
+        <img src="../img/projects/spidey-webs.png">
         <h4>Web Shooters</h4>
         <p>Developed an arduino console to 'web' spider-man in a game, made with Unity.</p>
         <ul>
@@ -60,13 +61,15 @@
             <li>C#</li>
         </ul>
     </section>
+    </div>
 </section>
 
 <section>
-    <h2>Web Development</h2>
+    <button class="work-button"><h2>Web Development</h2></button>
 
+    <div id="web-dev">
     <section class="featured-work">
-        <img src="../img/social media/seam-social.png">
+        <img src="../img/projects/notebook.png">
         <h4>Journal Miniapp</h4>
         <p>Typescript mini-app, published on Google PlayStore and Appstore as a part of in-game library.</p>
         <ul>
@@ -76,7 +79,7 @@
     </section>
 
     <section class="featured-work">
-        <img src="../img/social media/seam-social.png">
+        <img src="../img/projects/two-worlds-icon.png">
         <h4>Two Worlds</h4>
         <p>Javascript project that uses Craig Reynold's flocking idea</p>
         <ul>
@@ -89,7 +92,7 @@
     </section>
 
     <section class="featured-work">
-        <img src="../img/social media/seam-social.png">
+        <img src="../img/projects/rick-and-morty.png">
         <h4>Rick and Morty Search Engine</h4>
         <p>A search engine that uses rick and morty rest api to find the show's characters.</p>
         <ul>
@@ -100,13 +103,15 @@
             <li>User Studies</li>
         </ul>
     </section>
+    </div>
 </section>
 
 <section>
-    <h2>UI/UX</h2>
+    <button class="work-button"><h2>UI/UX</h2></button>
 
+    <div id="ui-ux">
      <section class="featured-work">
-        <img src="../img/social media/seam-social.png">
+        <img src="../img/social media/shades.png">
         <h4>Shades: UX Studies</h4>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
@@ -116,7 +121,7 @@
     </section>
 
      <section class="featured-work">
-        <img src="../img/social media/seam-social.png">
+        <img src="../img/projects/content-tattva/ct logo.png">
         <h4>Content Tattva</h4>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
@@ -127,6 +132,7 @@
             <li>Color Theory</li>
         </ul>
     </section>
+    </div>
 </section>
 </body>
 <script src="../src/main.js"></script>
