made a new layout

--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="/icon/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Liter&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/nav-styles.css">
     <title>Vaibhavy's Page</title>
 </head>
 <body>
-
-    <header>
-        <h3>vaibhavy</h3>
-        <button id="menu-button"><img src = "img/ui/menu.svg"></button>
-    </header>
-
     <nav id="menu-items">
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="./pages/works.html">projects</a></li>
-            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
-            <li><a href="https://github.com/vaibhavyxx">github</a></li>
-            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="./pages/works.html">Projects</a></li>
+            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">Resume</a></li>
+            <li><a href="https://github.com/vaibhavyxx">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">LinkedIn</a></li>
         </ul>
     </nav>
 
     <div id="intro">
-        <video src="./img/videos/teaser.mp4" alt="demo reel" type="video/mp4" autoplay="true" ></video>
+        <video src="./img/videos/teaser.mp4" alt="demo reel" type="video/mp4" autoplay="true" controls="true"></video>
         <h1>Vaibhavy</h1>
         <h3>creative technologist</h3>
 
@@ -35,7 +30,7 @@
         <h2>Experiences</h2>
     </div>
     <footer>
-       Made in 2025
+       <p><strong>Disclaimer:</strong> This website is a still work in progress and should be best experienced on laptop/desktop.</p>
     </footer>
 </body>
 <script src="./src/main.js"></script>
