updated content and made minor tweaks to css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/nav-styles.css">
+    <link rel="stylesheet" href="style/home-style.css">
     <title>Vaibhavy's Page</title>
 </head>
 <body>
@@ -22,12 +23,8 @@
 
     <div id="intro">
         <video src="./img/videos/teaser.mp4" alt="demo reel" type="video/mp4" autoplay="true" controls="true"></video>
-        <h1>Vaibhavy</h1>
-        <h3>creative technologist</h3>
-
-    <div id="work">
-        <h2>Experiences</h2>
-    </div>
+        <h2>I’m a game developer and I love experimenting with emerging technologies. I have worked in making 3D, 2D games in Unity and have experimented with Augmented (AR)/Virtual Reality (VR). Currently, I’m working at Magic Spell Studios as a VR developer on an NDA project.</h2>
+    <div id="empty"></div>
     <footer>
        <p><strong>Disclaimer:</strong> This website is a still work in progress and should be best experienced on laptop/desktop.</p>
     </footer>
