--- a/pages/works.html
+++ b/pages/works.html
@@ -18,8 +18,8 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="./works.html">Projects</a></li>
-            <li><a href="https://github.com/vaibhavyxx">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">LinkedIn</a></li>
+            <li><a href="https://github.com/vaibhavyxx" target="_blank">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/" target="_blank">LinkedIn</a></li>
         </ul>
     </nav>
 
@@ -41,8 +41,8 @@
             <li>Unity</li>
             <li>Version Control</li>
             <li>C#</li>
-            <li><a href="" class="source">Github</a></li>
-            <li><a href="" class="source">BTS</a></li>
+            <li><a href="https://github.com/vaibhavyxx/TeJay">Github</a></li>
+            <li><a href="">BTS</a></li>
         </ul>
     </section>
 
@@ -55,7 +55,7 @@
             <b>Engine:</b> Zappar<br>
             <b>Platforms:</b> Web AR<br>
             <b>Team Size:</b> 1<br>
-            <b>Credits: </b> <a href="">Tiger Model</a>, <a href="">Music</a> </br></br>
+            <b>Credits: </b> <a href="https://sketchfab.com/3d-models/tiger-character-06ad04516f544a0d8d49f369de493e13#download">Tiger Model</a>, <a href="https://freesound.org/people/Doctor_Dreamchip/sounds/458086/">Music</a> </br></br>
         I made this experience for RIT’s 2024 Brickcity homecoming where parents could click a photograph with Ritchie (the tiger.) I added a particle system to have confetti to enhance user experience and engagement. So far, I have had over 1.5k+ user interactions with this experience.</br>
         </p>
         <ul>
@@ -80,6 +80,8 @@
             <li>Arduino</li>
             <li>Game Art</li>
             <li>C#</li>
+            <li><a href="https://github.com/vaibhavyxx/WebShooters">Github</a></li>
+            <li><a href="https://youtu.be/IWQdXeVEgxM">Post Mortem</a></li>
         </ul>
     </section>
     </div>
@@ -104,6 +106,8 @@
         <ul>
             <li>Typescript</li>
             <li>Rect</li>
+            <li><a href="https://github.com/vaibhavyxx/Journal">Github</a></li>
+            <li><a href="https://youtu.be/_BdUbzml1x4">Demo</a></li>
         </ul>
     </section>
 
@@ -123,14 +127,12 @@
         <ul>
             <li>Javascript</li>
             <li>p5</li>
-            <li>Vectors</li>
-            <li>NPC</li>
-            <li>simulation</li>
+            <li><a href="https://github.com/vaibhavyxx/Two-Worlds">Github</a></li>
         </ul>
     </section>
 
     <section class="featured-work">
-        <img class="visual" src="../img/projects/rick-and-morty.png">
+         <video class="visual" src="../img/videos/rick-morty.mp4" controls="true" type="video/mp4" alt="website"></video>
 
         <h2>Rick and Morty Search Engine</h2>
         <p>
@@ -148,6 +150,7 @@
             <li>Figma</li>
             <li>Color Theory</li>
             <li>User Studies</li>
+            <li><a href="https://github.com/vaibhavyxx/Rick-and-Morty-Search-Engine">Github</a></li>
         </ul>
     </section>
     </div>
