--- a/pages/works.html
+++ b/pages/works.html
@@ -156,7 +156,7 @@
     </div>
 </section>
 
-<!--<section>
+<section>
     <h1>UI/UX</h1>
 
     <div id="ui-ux">
@@ -183,7 +183,7 @@
         </ul>
     </section>
     </div>
-</section>-->
+</section>
 
 <div id="empty"></div>
 <footer>
