--- a/pages/content-tattva.html
+++ b/pages/content-tattva.html
@@ -7,23 +7,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contenttattva</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/nav-styles.css">
+    <link rel="stylesheet" href="../style/works-style.css">
 </head>
 <body>
-    <header> 
-        <img src="../icon/vd-icon.png" alt="logo" width="50px" height="50px">
-        <h3>my portfolio</h3>
-    </header>
-
-    <div id="nav">
+    <nav id="menu-items">
         <ul>
-            <li><a href="../index.html">home</a></li>
-            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing" target="_blank">resume</a></li>
-            <li><a href="https://github.com/vaibhavyxx">github</a></li>
-            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
-            <li><a href="mailto:vd5443@rit.edy">mail</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./works.html">Projects</a></li>
+            <li><a href="https://github.com/vaibhavyxx" target="_blank">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/" target="_blank">LinkedIn</a></li>
         </ul>
-    </div>
+    </nav>
 
     <article id="story">
         <h1>how i redesigned contenttattva’s website?</h1>
