--- a/pages/works.html
+++ b/pages/works.html
@@ -162,7 +162,7 @@
     <div id="ui-ux">
      <section class="featured-work">
         <img class="visual" src="../img/social media/shades.png">
-        <h2>Shades: UX Studies</h2>
+        <a href="../pages/shades-ux-studies.html"><h2>Shades: UX Studies</h2></a>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
             <li>UX Studies</li>
@@ -172,7 +172,7 @@
 
      <section class="featured-work" id="last-div">
         <img class="visual" src="../img/projects/content-tattva/ct logo.png">
-        <h2>Content Tattva</h2>
+        <a href="../pages/content-tattva.html"><h2>Content Tattva</h2></a>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
             <li>UX Studies</li>
