--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -7,113 +7,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shades ux internship</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/nav-styles.css">
+    <link rel="stylesheet" href="../style/works-style.css">
 </head>
 <body>
-    <!--more content on the types of questions you asked
-    how did you approach people to do your survey
-    success rate with the reward system
-    what did you accomplish at the end?
-    maps, any evidence that you had used during this process
-    -->
-    <header> 
-        <img src="../icon/vd-icon.png" alt="logo" width="50px" height="50px">
-        <h3>my portfolio</h3>
-    </header>
-
-    <div id="nav">
+     <nav id="menu-items">
         <ul>
-            <li><a href="../index.html">home</a></li>
-            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing" target="_blank">resume</a></li>
-            <li><a href="https://github.com/vaibhavyxx">github</a></li>
-            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
-            <li><a href="mailto:vd5443@rit.edy">mail</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./works.html">Projects</a></li>
+            <li><a href="https://github.com/vaibhavyxx" target="_blank">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/" target="_blank">LinkedIn</a></li>
         </ul>
+    </nav>
+
+    <h1>Shades' User Research Internship</h1>
+    <h3>This is my process for getting user response and feedback for a social media/news app company.</h3>
+
+    <p>In September 2024, I had spent the next 12 weeks interviewing college students to gather their feedback about the app. Part of my responsibilities includeded recruiting people for questionnaire, increasing campus pressence for the app and increasing app's retention rate.</p>
+    <p>By the end of November, I had compiled a presentation to discuss my experience and share feedbacks from testers. As a result, I made this presentation which goes in depth about my findings.</p>
+
+    <div id="slides">
+        <img id="slides-img" src="../img/projects/shades/ppt/1.png" width="90%" height="auto">
+    <div id="buttons">
+        <button id="back-button">Back</button>
+        <button id="next-button">Next</button>
     </div>
-
-    <article id="story">
-        <h1>how i documented my UX research for my internship?</h1>
-        <h3>last fall (2024), i got a remote ux internship at shades and this is my journey <3</h3>
-        <img src="../img/projects/shades.png" width="auto" height="100px">
-        <p>Shades News is social media/news app with an aim to make GenZ audience more aware about their source of information for news. According to my research, over 80% of my target audience (GenZ particularly) prefer social media as a means to get their news. However, it is easy to spread misinformation through apps like Tik Tok, Instagram, YouTube, etc. and they wanted to make young adults more aware about their news.</p>
-        <p>
-            Through these 12 weeks, I had conducted 50+ user reviews with following goals in mind:
-            <ul>
-                <li>App’s branding: Do you like the app’s personality for fonts, colors and animations?</li>
-                <li>Content: How did they feel about the news? Do they like the variety or is there something particular they would have liked to know?</li>
-                <li>Reusability: How likely are they to use the app again? And, what pushes them in that direction?</li>
-                <li>Gamification: What did they feel about the game? Was there anything that stood out to them?</li>
-                <li>Streaks: How did they feel about having streaks? Did they have any thoughts when using the prototype version of streaks?</li>
-            </ul>
-        </p>
-
-        <h2>methods</h2>
-        <p>During my first week of internship, I had to prepare a questionnaire and how would I get my user testers. Following is an excerpt of how I would get my testers for the app:</p>
-        <ol>
-            <li>Reach out to students in my classes and clubs (e.g., Political Science, Journalism) to gauge interest in news apps and ask them to try Shades.</li>
-            <li>Speak with professors about visiting relevant club meetings (e.g., Criminal Justice Club, Model UN) to promote Shades and encourage members to complete a survey.</li>
-            <li>Engage with friends’ mutual connections and people I meet in shared spaces (e.g., dining halls, study lounges) by discussing how Shades makes consuming news easier for Gen Z.</li>
-            <li>Put up flyers on bulletin boards and around campus featuring a QR code linked to the app and survey for easy access.</li>
-            <li>Post polls or short stories on my social media platforms (Instagram, Twitter) to identify those interested in trying out new news apps.</li>
-            <li>Join and attend clubs like Model UN to build relationships with like-minded students who may be interested in a new way to consume news.</li>
-            <li>Use email to send out personalized messages about Shades, potentially offering an incentive for survey completion (e.g., a raffle for gift cards or a small prize).</li>
-            <li>Track progress and insights using Excel to stay organized and ensure a consistent outreach approach.</li>
-        </ol>
-
-        <p>However, over the course of semester, these were my following tactics:
-        <ul>
-            <li>Quantitative research: For this technique, I had made an excel sheet for all my responses from google forms where I asked my testers:
-                <ul>
-                    <li>Rank the app’s performance and intuitiveness on a scale of 1-5?</li>
-                    <li>How likely are they to reuse the app on a scale of 1-5?</li>
-                    <li> What mediums do they prefer for news? (newsletters/websites/news apps/social media)</li>
-                </ul>
-            </li>
-
-            <li>
-                Qualitative research: Most of my qualitative work happened through user-interviews and focus groups.
-                <ul>
-                    <li>I had a set of questionnaires from my first week that evolved as I interviewed more people to get their bias free opinions.</li>
-                    <li>Experimented with focus groups as I would let a group of friends try out the app to see what their thoughts are.</li>
-                </ul>
-            </li>
-
-            <li>Behavioural research: A lot of my interviews were recorded to allow me to make notes later, this allowed me to pick up cues like “ah”, “oh, that’s cool”, etc. that I would have missed if I took notes in real time. 
-                <br>However, later I realized that having a screen recording would probably be the best. It allowed me to see at what moments my user was reacting to the app as I didn’t have to guess those moments.
-                </li>
-
-        </ul>
-        </p>
-
-        <h2>findings</h2>
-        <img src="../img/projects/shades/age.png" width="50%" height="auto">
-        <img src="../img/projects/shades/gender-ratio.png" width="50%" height="auto">
-        <img src="../img/projects/shades/news-consumption.png" width="50%" height="auto">
-        <img src="../img/projects/shades/verssion.png" width="50%" height="auto">
-        <p>
-            Most users liked the app and could see themselves using occasionally but it created a weird delimma as those who don't use social media did not feel the app was for them and for those for who do use social media felt that the app was not impressive enough for them to use it everyday.
-        </p>
-
-        <p>Some of the user suggestions are listed below:
-            <ul>
-                <li>“Less visually busy, sources more visible, I would like to know about the app's integrity and what it does to fact check/be honest about its bias.”</li>
-
-                <li>“Maybe more customization, such as different background color themes. also whenever I refreshed, it wasn’t giving me new stories at the top.”</li>
-                    
-                <li>“The Icons and the amount of screen space that is being clutter with unnecessary things could be considered. There are UI components that seem unnecessary and can be made simpler.”</li>
-            </ul>
-        </p>
-        <div id="socials">
-            <p>Feel free to check out my presentation here :&#41</p>
-            <a href="https://www.canva.com/design/DAGXNVFNpZA/UVAFhPpnE23Tw0TBMW1DQg/edit?utm_content=DAGXNVFNpZA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><img src="../img/social media/canva.png" width="10%" height="auto"></a>
-        </div>
-    </article>
-
-    <footer>
-        made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
-        <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
-    </footer>
-
+    </div>
+    <footer></footer>
 </body>
-<script src="../src/main.js"></script>
+<script src="../src/ppt.js"></script>
 </html>
