--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shades ux internship</title>
     <link rel="stylesheet" href="../style/nav-styles.css">
+    <link rel="stylesheet" href="../style/button-style.css">
     <link rel="stylesheet" href="../style/works-style.css">
 </head>
 <body>
