removed ct link

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <video src="./img/videos/teaser.mp4" alt="demo reel" type="video/mp4" autoplay="true" controls="true"></video>
         <h2>I’m a game developer and I love experimenting with emerging technologies. I have worked in making 3D, 2D games in Unity and have experimented with Augmented (AR)/Virtual Reality (VR). Currently, I’m working at Magic Spell Studios as a VR developer on an NDA project.</h2>
     <div id="empty"></div>
-    <footer>
+    <!--<footer>
        <p><strong>Disclaimer:</strong> This website is a still work in progress and should be best experienced on laptop/desktop.</p>
-    </footer>
+    </footer>-->
 </body>
 <script src="./src/main.js"></script>
 </html>
