--- a/pages/works.html
+++ b/pages/works.html
@@ -172,7 +172,7 @@
 
      <section class="featured-work" id="last-div">
         <img class="visual" src="../img/projects/content-tattva/ct logo.png">
-        <a href="../pages/content-tattva.html"><h2>Content Tattva</h2></a>
+        <h2>Content Tattva</h2>
         <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
         <ul>
             <li>UX Studies</li>
@@ -186,9 +186,9 @@
 </section>
 
 <div id="empty"></div>
-<footer>
+<!--<footer>
     <p><strong>Disclaimer:</strong> This website is a still work in progress and should be best experienced on laptop/desktop.</p>
-</footer>
+</footer>-->
 </body>
 <script src="../src/main.js"></script>
 </html>
