--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -33,8 +33,8 @@
         <button id="back-button">Back</button>
         <button id="next-button">Next</button>
     </div>
-    </div>
-    <footer></footer>
+    </div> 
+    <div id="empty"></div>
 </body>
 <script src="../src/ppt.js"></script>
 </html>
