--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <link rel="icon" type="image/x-icon" href="/icon/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
